fixed overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,6 @@ body {
   width: 100%;
   max-width: 1920px;
   position: relative;
-  overflow: hidden;
 
   .App-header {
     display: flex;
