--- a/src/components/spheres/styles/desktop.scss
+++ b/src/components/spheres/styles/desktop.scss
@@ -8,7 +8,6 @@ $spheres-speed: 20s;
   background: $darker-grape;
   z-index: -2;
   filter: blur(100px);
-  overflow: hidden;
 
   .sphere1 {
     height: 65%;
